<resources>
    <string name="app_name">Bay Wave</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="song_title">Song Title</string>
    <string name="artist">Artist Name</string>
    <string name="album">Album Name</string>
    <string name="action_settings">Action Settings</string>

    <!-- Button Descriptions -->
    <string name="play_pause_button">Plays and pauses the song</string>
    <string name="skip_button">Skips to next song</string>
    <string name="unskip_button">Goes back to the old song</string>

    <!-- Navigation Icons -->
    <string name="play_icon">Play</string>
    <string name="search_icon">Search</string>
    <string name="playlist_icon">Playlists</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_search_fragment">Hello Search Fragment</string>

    <!-- Play Screen -->
    <string name="start_time">0:00</string>
    <string name="end_time">End Time</string>
    <string name="like_song">Adds song to library</string>
    <string name="song_liked">Song Added to Library</string>
    <string name="song_unliked">Song Removed from Library</string>

    <!-- Search Screen -->
    <string name="search_bar_text">Search songs or artists</string>

    <!-- Playlist Screen -->
    <string name="playlist_cover_desc">Cover of Playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="liked_songs_desc">Default Playlist</string>
    <string name="new_playlist">New Playlist</string>
    <string name="playlist_toolbar_text">Your Playlists</string>
    <string name="new_playlist_hint">Enter Name Here</string>
    <string name="create_playlist">Create</string>
    <string name="liked_playlists">Liked Songs</string>
    <string name="go_back_arrow">Back Arrow</string>

    <!-- Default Start Screen -->
    <string name="no_songs">Your Library is Empty</string>
    <string name="search_for_songs">Search for songs to add them to your library</string>
    <string name="browse_music">Browse Music</string>


</resources>