<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/dialog_background">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/smooth_line_7"
        android:text="@string/new_playlist"
        android:textSize="32sp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/myEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:hint="@string/new_playlist_hint"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/createNewPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/create_playlist"
        android:fontFamily="@font/smooth_line_7"
        android:textColor="@color/background"/>



</LinearLayout>
